Fix keydown event event.ctrKey and event.shiftKey were returning false when triggering the event with said keys

--- a/style.css
+++ b/style.css
@@ -13,14 +13,16 @@ body {
 #content {
     display: flex;
     min-height: 100vh;
+    min-width: 100vh;
     justify-content: center;
     align-items: center;
     gap: 60px;
 }
 
 #options, #clear {
-    margin-top: 50px;
+    margin-top: -16px;
 }
+
 
 #options, #modes {
     display: flex;
@@ -64,12 +66,18 @@ body {
     order: 1;
 }
 
-#container{
+#container {
     display: grid;
     border: 1px solid grey;
     background-color: white;
 }
 
+#instructions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 25px;
+}
 
 #clear {
     width: 100px;
